--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@clerk/nextjs": "6.2.0",
     "@t3-oss/env-nextjs": "0.11.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
