feat(workspace): add packages directory

--- a/package.json
+++ b/package.json
@@ -80,5 +80,8 @@
     "start": "next start",
     "type-check": "tsc --noemit"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "workspaces": [
+    "packages/*"
+  ]
 }
