--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,10 +12,17 @@
     "next/typescript",
     "prettier"
   ],
-  "ignorePatterns": ["*.d.ts", "*.js", "next.config.ts"],
+  "ignorePatterns": [
+    "*.d.ts",
+    "*.js",
+    "next.config.ts"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["./tsconfig.json"],
+    "project": [
+      "./packages/liver/tsconfig.json",
+      "./packages/user/tsconfig.json"
+    ],
     "warnOnUnsupportedTypeScriptVersion": false
   },
   "plugins": [
@@ -33,8 +40,18 @@
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "ext/lines-between-object-properties": ["error", "never"],
-    "filenames/match-exported": ["error", ["camel", "kebab", "pascal"]],
+    "ext/lines-between-object-properties": [
+      "error",
+      "never"
+    ],
+    "filenames/match-exported": [
+      "error",
+      [
+        "camel",
+        "kebab",
+        "pascal"
+      ]
+    ],
     "filenames/match-regex": "error",
     "filenames/no-index": "off",
     "import/newline-after-import": [
@@ -110,7 +127,10 @@
       },
       {
         "blankLine": "never",
-        "next": ["case", "default"],
+        "next": [
+          "case",
+          "default"
+        ],
         "prev": "case"
       },
       {
@@ -124,14 +144,20 @@
         "prev": "let"
       }
     ],
-    "quotes": ["error", "double"],
+    "quotes": [
+      "error",
+      "double"
+    ],
     "react-hooks/exhaustive-deps": [
       "error",
       {
         "enableDangerousAutofixThisMayCauseInfiniteLoops": true
       }
     ],
-    "react/jsx-boolean-value": ["error", "always"],
+    "react/jsx-boolean-value": [
+      "error",
+      "always"
+    ],
     "react/jsx-newline": [
       "error",
       {
@@ -140,7 +166,10 @@
     ],
     "react/jsx-sort-props": "error",
     "require-jsdoc": "off",
-    "semi": ["error", "always"],
+    "semi": [
+      "error",
+      "always"
+    ],
     "sort-destructure-keys/sort-destructure-keys": "error",
     "sort-imports": [
       "error",
