--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,8 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": [
-      "./packages/liver/tsconfig.json",
-      "./packages/user/tsconfig.json"
+      "./apps/liver/tsconfig.json",
+      "./apps/user/tsconfig.json"
     ],
     "warnOnUnsupportedTypeScriptVersion": false
   },
