--- a/apps/user/.eslintrc.json
+++ b/apps/user/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["../../.eslintrc.json"]
+  "extends": ["../../.eslintrc.json"],
+  "parserOptions": {
+    "project": ["./tsconfig.json"],
+    "warnOnUnsupportedTypeScriptVersion": false
+  }
 }
