--- a/apps/liver/.eslintrc.json
+++ b/apps/liver/.eslintrc.json
@@ -3,5 +3,10 @@
   "parserOptions": {
     "project": ["./tsconfig.json"],
     "warnOnUnsupportedTypeScriptVersion": false
+  },
+  "settings": {
+    "next": {
+      "rootDir": "apps/liver/"
+    }
   }
 }
