--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-write-good-comments": "0.2.0",
     "knip": "5.36.2",
     "lefthook": "1.8.2",
+    "npm-run-all": "4.1.5",
     "prettier": "3.3.3",
     "prisma": "5.21.1",
     "secretlint": "9.0.0",
@@ -61,9 +62,13 @@
     "find:unused": "next-unused",
     "knip": "knip",
     "lefthook:precommit": "npx lefthook run pre-commit",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "run-p lint:liver lint:user",
+    "lint:fix": "run-p lint:fix:liver lint:fix:user",
+    "lint:fix:liver": "npm run lint:fix -w liver",
+    "lint:fix:user": "npm run lint:fix -w user",
+    "lint:liver": "npm run lint -w liver",
     "lint:style": "stylelint --fix '**/*.css'",
+    "lint:user": "npm run lint -w user",
     "prettier": "prettier --write .",
     "secretlint": "secretlint '**/*'",
     "type-check": "tsc --noemit"
