--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "start": "next start"
   },
   "version": "0.1.0"
