--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -8,6 +8,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "ress": "5.0.2",
+    "use-show-window-size": "0.0.1",
     "zod": "3.23.8"
   },
   "name": "user",
