--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -4,6 +4,7 @@
     "@clerk/nextjs": "6.2.0",
     "@prisma/client": "5.21.1",
     "@t3-oss/env-nextjs": "0.11.1",
+    "@tabler/icons-react": "3.22.0",
     "@vercel/postgres": "0.10.0",
     "hamburger-react": "2.5.1",
     "next": "15.0.2",
