--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -25,8 +25,5 @@
     "lint:fix": "next lint --fix",
     "start": "next start"
   },
-  "version": "0.1.0",
-  "devDependencies": {
-    "@types/react": "18.3.12"
-  }
+  "version": "0.1.0"
 }
