--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "next/typescript",
     "prettier"
   ],
-  "ignorePatterns": ["*.d.ts", "*.js", "next.config.ts"],
+  "ignorePatterns": ["*.d.ts", "*.js", "*.mjs"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": ["./tsconfig.json"],
