--- a/apps/liver/package.json
+++ b/apps/liver/package.json
@@ -5,9 +5,9 @@
     "@prisma/client": "5.21.1",
     "@t3-oss/env-nextjs": "0.11.1",
     "@vercel/postgres": "0.10.0",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "next": "14.2.18",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "ress": "5.0.2",
     "zod": "3.23.8"
   },
