--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -7,9 +7,9 @@
     "@tabler/icons-react": "3.22.0",
     "@vercel/postgres": "0.10.0",
     "hamburger-react": "2.5.1",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "next": "14.2.18",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-modern-drawer": "1.4.0",
     "ress": "5.0.2",
     "use-show-window-size": "0.0.1",
