--- a/apps/liver/package.json
+++ b/apps/liver/package.json
@@ -5,6 +5,7 @@
     "@prisma/client": "5.21.1",
     "@t3-oss/env-nextjs": "0.11.1",
     "@vercel/postgres": "0.10.0",
+    "jiti": "2.4.0",
     "next": "14.2.18",
     "react": "18.3.1",
     "react-dom": "18.3.1",
