--- a/apps/liver/package.json
+++ b/apps/liver/package.json
@@ -12,6 +12,11 @@
     "ress": "5.0.2",
     "zod": "3.23.8"
   },
+  "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1"
+  },
   "name": "liver",
   "private": true,
   "scripts": {
