--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -17,6 +17,11 @@
     "usehooks-ts": "3.1.0",
     "zod": "3.23.8"
   },
+  "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1"
+  },
   "name": "user",
   "private": true,
   "scripts": {
