chore(package): add skyway-sdk's

--- a/apps/liver/package.json
+++ b/apps/liver/package.json
@@ -3,6 +3,9 @@
     "@clerk/localizations": "3.6.1",
     "@clerk/nextjs": "6.2.0",
     "@prisma/client": "5.21.1",
+    "@skyway-sdk/core": "1.10.0",
+    "@skyway-sdk/room": "1.10.0",
+    "@skyway-sdk/token": "1.6.3",
     "@t3-oss/env-nextjs": "0.11.1",
     "@vercel/postgres": "0.10.0",
     "jiti": "2.4.0",
