feat(LiveStream*): add component and api route

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -23,4 +23,4 @@ pre-commit:
     eslint:
       glob: "*.{js,jsx,ts,tsx}"
       run: npx eslint --fix {staged_files}
-      stage_fixed: true
+      stage_fixed: false
