--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -15,6 +15,7 @@
       }
     ],
     "media-feature-range-notation": "context",
+    "no-descending-specificity": null,
     "order/order": [
       "custom-properties",
       "dollar-variables",
@@ -34,6 +35,11 @@
         "moduleResolutionType": "webpack"
       }
     ],
-    "rule-empty-line-before": "always"
+    "rule-empty-line-before": [
+      "always",
+      {
+        "except": ["first-nested"]
+      }
+    ]
   }
 }
