--- a/apps/liver/package.json
+++ b/apps/liver/package.json
@@ -2,9 +2,21 @@
   "dependencies": {
     "@clerk/localizations": "3.6.1",
     "@clerk/nextjs": "6.2.0",
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@mui/icons-material": "6.1.7",
+    "@mui/material": "6.1.7",
     "@prisma/client": "5.21.1",
     "@t3-oss/env-nextjs": "0.11.1",
+    "@tiptap/core": "2.9.1",
+    "@tiptap/extension-heading": "2.9.1",
+    "@tiptap/extension-image": "2.9.1",
+    "@tiptap/extension-table": "2.9.1",
+    "@tiptap/pm": "2.9.1",
+    "@tiptap/react": "2.9.1",
+    "@tiptap/starter-kit": "2.9.1",
     "@vercel/postgres": "0.10.0",
+    "mui-tiptap": "1.13.0",
     "next": "14.2.18",
     "react": "18.3.1",
     "react-dom": "18.3.1",
