--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@clerk/localizations": "3.6.1",
     "@clerk/nextjs": "6.2.0",
+    "@emotion/react": "11.13.3",
     "@prisma/client": "5.21.1",
     "@t3-oss/env-nextjs": "0.11.1",
     "@tabler/icons-react": "3.22.0",
