--- a/lefthook.yml
+++ b/lefthook.yml
@@ -20,7 +20,7 @@ pre-commit:
       glob: "*.{ts,tsx}"
       root: apps/user/
       run: npx tsc --noEmit
-    eslint:
-      glob: "*.{js,jsx,ts,tsx}"
-      run: npx eslint --fix {staged_files}
-      stage_fixed: true
+    # eslint:
+    #   glob: "*.{js,jsx,ts,tsx}"
+    #   run: npx eslint --fix {staged_files}
+    #   stage_fixed: true
