--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "find:unused": "next-unused",
     "knip": "knip",
     "lefthook:precommit": "npx lefthook run pre-commit",
-    "lint": "run-p lint:liver lint:user",
+    "lint": "run-p lint:hiyasakamishiro lint:liver lint:user",
     "lint:fix": "run-p lint:fix:liver lint:fix:user",
+    "lint:fix:hiyasakamishiro": "npm run lint:fix -w hiyasakamishiro",
     "lint:fix:liver": "npm run lint:fix -w liver",
     "lint:fix:user": "npm run lint:fix -w user",
+    "lint:hiyasakamishiro": "npm run lint -w hiyasakamishiro",
     "lint:liver": "npm run lint -w liver",
     "lint:style": "stylelint --fix '**/*.css'",
     "lint:user": "npm run lint -w user",
