ci: fix eslint setting

--- a/apps/hiyasakamishiro/.eslintrc.json
+++ b/apps/hiyasakamishiro/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["../../.eslintrc.json"],
+  "parserOptions": {
+    "project": ["./tsconfig.json"],
+    "warnOnUnsupportedTypeScriptVersion": false
+  }
 }
