feat: integrate Serwist for PWA support and update project configuration
- Added @serwist/next dependency for enhanced PWA capabilities.
- Updated tsconfig.json to include webworker library and Serwist typings.
- Modified next.config.mjs to utilize Serwist for service worker configuration.
- Created service worker (sw.ts) for caching and offline support.
- Added manifest.json for PWA metadata and icons.
- Included new icon images for the application.
- Updated layout and page components to reflect new metadata structure.

--- a/apps/liver/tsconfig.json
+++ b/apps/liver/tsconfig.json
@@ -4,6 +4,7 @@
       "@/*": ["./src/*"]
     }
   },
+  "exclude": ["node_modules"],
   "extends": "../../tsconfig.json",
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
