--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "incremental": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "webworker"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "noEmit": true,
@@ -17,7 +17,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "ES2017"
-  },
-  "exclude": ["node_modules"]
+    "target": "ES2017",
+    "types": ["@serwist/next/typings"]
+  }
 }
