--- a/apps/hiyasakamishiro/tsconfig.json
+++ b/apps/hiyasakamishiro/tsconfig.json
@@ -4,6 +4,7 @@
       "@/*": ["./src/*"]
     }
   },
+  "exclude": ["node_modules", "public/sw.js"],
   "extends": "../../tsconfig.json",
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
