feat: implement push notification functionality and update project dependencies
- Added web-push library for handling push notifications.
- Introduced actions.ts for managing user subscriptions and sending notifications.
- Updated next.config.mjs to include security headers for enhanced protection.
- Replaced manifest.json with manifest.ts for better type safety and structure.
- Enhanced page.tsx to manage push notifications and installation prompts.
- Removed obsolete manifest.json file.
- Updated package.json and package-lock.json to include new dependencies and types.

--- a/apps/hiyasakamishiro/package.json
+++ b/apps/hiyasakamishiro/package.json
@@ -3,12 +3,14 @@
     "@serwist/next": "9.0.11",
     "next": "14.2.20",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "web-push": "3.6.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "@types/web-push": "3.6.4"
   },
   "name": "hiyasakamishiro",
   "private": true,
