--- a/apps/hiyasakamishiro/package.json
+++ b/apps/hiyasakamishiro/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "@serwist/next": "9.0.11",
+    "@tabler/icons-react": "3.24.0",
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
+    "react-tabs": "6.0.2",
+    "ress": "5.0.2",
     "web-push": "3.6.7"
   },
   "devDependencies": {
